# koushi-matrix

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  REPOSITORY_RULES.md  THIRD_PARTY_NOTICES.md  deny.toml  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  macos-keychain-tier2.yml
.github/workflows.disabled/: macos-keychain-tier2.yml
.superpowers/sdd/: probe-isolation-final-fix-report.md  task-1-report.md  task-3-report.md  task-6-report.md
apps/desktop/: appHarness.html  eslint.config.js  harness.html  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop-shell/: README.md  app.js  index.html  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  windows-overlay.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  dto.rs  keyring_backend.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: account.rs  activity.rs  diagnostics.rs  directory.rs  e2ee.rs  live_signals.rs  local_encryption.rs  mod.rs  native_attention.rs  navigation.rs  profile.rs  room.rs  search.rs  session.rs  settings.rs  timeline.rs  views.rs
apps/desktop/src-tauri/tests/: keyring_backend.rs
apps/desktop/src-tauri/tests/golden/: frontend_app_state.json
crates/koushi-backend/: Cargo.toml
crates/koushi-backend/src/: composition.rs  lib.rs
crates/koushi-backend/tests/: fake_backend.rs
crates/koushi-core/: Cargo.toml
crates/koushi-core/src/: account.rs  activity_resolution.rs  cached_image.rs  causal_projection.rs  command.rs  composer_draft_lifecycle.rs  event.rs  executor.rs  failure.rs  ids.rs  lib.rs  link_preview.rs  live_catchup.rs  live_tail_freshness.rs  media_preparation.rs  messages_backpressure.rs  read_state.rs  renderable_thumbnail.rs  room.rs  runtime.rs  scheduled_send.rs  search.rs  search_crawler.rs  settings.rs  startup_trace.rs  state_delta.rs  store.rs  sync.rs  threads_list.rs  timeline.rs  unread_trace.rs
crates/koushi-core/src/store/: composer_drafts.rs
crates/koushi-core/tests/: command_redaction.rs  composer_draft_lifecycle.rs  dm_space_ids.rs  event_redaction.rs  link_preview.rs  runtime_activity.rs  runtime_core.rs  runtime_device_session.rs  runtime_e2ee.rs  runtime_intent_lifecycle.rs  runtime_navigation.rs  runtime_notification_settings.rs  runtime_room_list_sync.rs  runtime_room_preferences.rs  runtime_room_selection_scale.rs  runtime_scheduled_send.rs  runtime_search.rs  runtime_session.rs  runtime_settings.rs  runtime_timeline.rs  send_queue_fast.rs
crates/koushi-core/tests/support/: mod.rs
crates/koushi-diagnostics/: Cargo.toml
crates/koushi-key/: Cargo.toml
crates/koushi-media/: Cargo.toml
crates/koushi-sdk/: Cargo.toml
crates/koushi-sdk/src/: lib.rs
crates/koushi-sdk/tests/: attention_surface.rs  event_cache.rs  login_discovery.rs  password_login.rs  timeline_gap_adapter.rs
crates/koushi-search/: Cargo.toml
crates/koushi-state/: Cargo.toml
crates/matrix-desktop-auth/: Cargo.toml
crates/matrix-desktop-auth/src/: lib.rs
crates/matrix-desktop-auth/tests/: login_discovery.rs  password_login.rs
crates/matrix-desktop-backend/: Cargo.toml
crates/matrix-desktop-backend/src/: composition.rs  lib.rs
crates/matrix-desktop-backend/tests/: fake_backend.rs
crates/matrix-desktop-core/: Cargo.toml
crates/matrix-desktop-core/src/: account.rs  command.rs  event.rs  executor.rs  failure.rs  ids.rs  lib.rs  link_preview.rs  room.rs  runtime.rs  scheduled_send.rs  search.rs  search_crawler.rs  settings.rs  store.rs  sync.rs  tests.rs  threads_list.rs  timeline.rs
crates/matrix-desktop-core/tests/: command_redaction.rs  event_redaction.rs  runtime_activity.rs  runtime_core.rs  runtime_device_session.rs  runtime_e2ee.rs  runtime_notification_settings.rs  runtime_room_list_sync.rs  runtime_scheduled_send.rs  runtime_search.rs  runtime_session.rs  runtime_settings.rs  runtime_timeline.rs
crates/matrix-desktop-core/tests/support/: mod.rs
crates/matrix-desktop-key/: Cargo.toml
crates/matrix-desktop-key/src/: lib.rs
crates/matrix-desktop-key/tests/: credential_backend.rs  key_management.rs
crates/matrix-desktop-sdk/: Cargo.toml
crates/matrix-desktop-sdk/src/: lib.rs
crates/matrix-desktop-sdk/tests/: attention_surface.rs  login_discovery.rs  password_login.rs
crates/matrix-desktop-search/: Cargo.toml
crates/matrix-desktop-state/: Cargo.toml
docker/: linux-gui.Dockerfile
docs/: README.md
docs/architecture/: desktop-foundation.md  i18n.md  overview.md  search-adapter.md  state-machine.md  tauri-react-shell.md
docs/design/: ui-design-language.md
docs/help/: user-trust-model.md
docs/policies/: engineering-rules.md
docs/qa/: 2026-06-20-local-synapse-handoff.md  2026-07-13-session-verification-handoff.md  2026-07-20-issue-285-linux-handoff.md  headless-basic-operations.md  integration-edge-cases.md  known-issues.md  macos-attended-smoke.md  milestone-9-completion-audit.md  shortcut-parity.md  startup-latency-observability.md
docs/reviews/: 2026-06-11-independent-design-review.md  2026-06-12-headless-core-runtime-review.md
docs/spikes/: 2026-06-11-spike-results.md  key-management.md  search-ngram.md  sidebar-composition.md
docs/upstream/: matrix-rust-sdk-feedback.md
scripts/: build-structure-contract.test.mjs  check-domain-crate-platform-deps.mjs  check-ime-text-inputs.mjs  check-ime-text-inputs.test.mjs  check-sdk-submodule.mjs  check-tauri-adapter-boundary.mjs  desktop-build-dmg.mjs  desktop-headless-local-qa.mjs  desktop-linux-gui-qa.mjs  desktop-mac-gui-smoke.mjs  desktop-manual-qa.mjs  desktop-real-homeserver-qa.mjs  desktop-release-gate-check.mjs  desktop-release-preflight.mjs  desktop-secret-scan.mjs  generate-koushi-icons.sh  run.sh  sdk-submodule-guard.test.mjs
scripts/lib/: generate-icns.py  local-homeserver-qa.mjs  qa-token-contract.d.mts  qa-token-contract.mjs  (+1 more)
tests/windows-overlay-acl/: Cargo.toml  build.rs  tauri.conf.json
tests/windows-overlay-acl/src/: lib.rs
(+484 files in other folders)
