[workspace]
members = [
    "crates/koushi-state",
    "crates/koushi-search",
    "crates/koushi-key",
    "crates/koushi-sdk",
    "crates/koushi-backend",
    "crates/koushi-core",
    "crates/koushi-diagnostics",
    "crates/koushi-media",
    "apps/desktop/src-tauri",
    "tests/windows-overlay-acl",
    "spikes/sidebar-composition",
    "spikes/key-management",
]
default-members = [
    "crates/koushi-state",
    "crates/koushi-search",
    "crates/koushi-key",
    "crates/koushi-sdk",
    "crates/koushi-core",
    "crates/koushi-diagnostics",
    "apps/desktop/src-tauri",
]
resolver = "2"
exclude = ["vendor/matrix-rust-sdk"]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
matrix-sdk = { git = "https://github.com/shinaoka/matrix-rust-sdk-work.git", rev = "2b4a98c76f962c06eac040c7653e142d6871ebfe", default-features = false, features = ["automatic-room-key-forwarding", "e2e-encryption", "experimental-search", "sqlite"] }
matrix-sdk-base = { git = "https://github.com/shinaoka/matrix-rust-sdk-work.git", rev = "2b4a98c76f962c06eac040c7653e142d6871ebfe" }
matrix-sdk-search = { git = "https://github.com/shinaoka/matrix-rust-sdk-work.git", rev = "2b4a98c76f962c06eac040c7653e142d6871ebfe" }
matrix-sdk-test = { git = "https://github.com/shinaoka/matrix-rust-sdk-work.git", rev = "2b4a98c76f962c06eac040c7653e142d6871ebfe" }
matrix-sdk-ui = { git = "https://github.com/shinaoka/matrix-rust-sdk-work.git", rev = "2b4a98c76f962c06eac040c7653e142d6871ebfe", default-features = false }
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }

[profile.dev.package."*"]
debug = false
