[workspace]
members = [
    "crates/koushi-state",
    "crates/koushi-search",
    "crates/koushi-key",
    "crates/koushi-sdk",
    "crates/koushi-backend",
    "crates/koushi-core",
    "crates/koushi-diagnostics",
    "crates/koushi-media",
    "apps/desktop/src-tauri",
    "tests/windows-overlay-acl",
    "spikes/sidebar-composition",
    "spikes/key-management",
]
default-members = [
    "crates/koushi-state",
    "crates/koushi-search",
    "crates/koushi-key",
    "crates/koushi-sdk",
    "crates/koushi-core",
    "crates/koushi-diagnostics",
    "apps/desktop/src-tauri",
]
resolver = "2"
exclude = ["vendor/matrix-rust-sdk"]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
matrix-sdk = { path = "vendor/matrix-rust-sdk/crates/matrix-sdk", default-features = false, features = ["automatic-room-key-forwarding", "e2e-encryption", "experimental-search", "sqlite"] }
matrix-sdk-base = { path = "vendor/matrix-rust-sdk/crates/matrix-sdk-base" }
matrix-sdk-search = { path = "vendor/matrix-rust-sdk/crates/matrix-sdk-search" }
matrix-sdk-test = { path = "vendor/matrix-rust-sdk/testing/matrix-sdk-test" }
matrix-sdk-ui = { path = "vendor/matrix-rust-sdk/crates/matrix-sdk-ui", default-features = false }
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }

[profile.dev.package."*"]
debug = false
