[package]
name = "koushi-backend"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
koushi-sdk = { path = "../koushi-sdk" }
koushi-key = { path = "../koushi-key" }
koushi-search = { path = "../koushi-search" }
koushi-state = { path = "../koushi-state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
