[package]
name = "koushi-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[[bin]]
name = "headless-core-qa"
path = "src/bin/headless-core-qa.rs"
required-features = ["qa-bin"]

[[bin]]
name = "real-homeserver-qa"
path = "src/bin/real-homeserver-qa.rs"
required-features = ["qa-bin"]

[dependencies]
koushi-sdk = { path = "../koushi-sdk" }
koushi-key = { path = "../koushi-key" }
koushi-search = { path = "../koushi-search" }
koushi-state = { path = "../koushi-state" }
base64 = "0.22"
chacha20poly1305 = "0.10"
eyeball = "0.8"
eyeball-im = "0.8"
futures-util = "0.3"
regex = "1"
matrix-sdk = { workspace = true }
matrix-sdk-base = { workspace = true }
matrix-sdk-ui = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "env-filter"] }
# Confined to executor.rs and channel plumbing per Platform Portability rule 2.
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }

[features]
# Exposes CoreRuntime::inject_actions for QA binaries and integration tests.
test-hooks = []
# Enables the headless-core-qa binary.
qa-bin = []

[dev-dependencies]
# Self-reference so integration tests under tests/ automatically enable the
# test-hooks feature (needed for CoreRuntime::inject_actions and test-only
# constructors). Unit tests in src/ already have cfg(test), so this is a
# no-op for them.
koushi-core = { path = ".", features = ["test-hooks"] }
matrix-sdk = { workspace = true, features = ["testing"] }
matrix-sdk-test = { workspace = true }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "rt", "sync", "time", "macros"] }
