[package]
name = "matrix-desktop-backend"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
matrix-desktop-sdk = { path = "../matrix-desktop-sdk" }
matrix-desktop-key = { path = "../matrix-desktop-key" }
matrix-desktop-search = { path = "../matrix-desktop-search" }
matrix-desktop-state = { path = "../matrix-desktop-state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
