[package]
name = "matrix-desktop-key"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
base64 = "0.22"
hkdf = "0.12"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
zeroize = "1"
