[package]
name = "matrix-desktop-sdk"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
smoke = ["rpassword"]

[[bin]]
name = "password-login-smoke"
path = "src/bin/password-login-smoke.rs"
required-features = ["smoke"]

[[bin]]
name = "headless-local-qa"
path = "src/bin/headless-local-qa.rs"
required-features = ["smoke"]

[dependencies]
eyeball-im = "0.8"
futures-util = "0.3"
matrix-desktop-state = { path = "../matrix-desktop-state" }
matrix-sdk = { path = "../../vendor/matrix-rust-sdk/crates/matrix-sdk", default-features = false, features = ["e2e-encryption", "experimental-search", "sqlite"] }
matrix-sdk-ui = { path = "../../vendor/matrix-rust-sdk/crates/matrix-sdk-ui", default-features = false }
mime = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
rpassword = { version = "7", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
url = "2"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
