[package]
name = "koushi-windows-overlay-acl"
version = "0.0.0"
edition = "2024"
license.workspace = true
publish = false

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["test"] }

[dev-dependencies]
serde_json = "1"
