[package]
name = "koushi-desktop"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]

[lib]
name = "koushi_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
matrix-desktop-backend = { path = "../../../crates/matrix-desktop-backend" }
matrix-desktop-core = { path = "../../../crates/matrix-desktop-core" }
matrix-desktop-state = { path = "../../../crates/matrix-desktop-state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2.3.3"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tempfile = "3"
