[package]
name = "koushi-desktop"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]

[lib]
name = "koushi_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
koushi-backend = { path = "../../../crates/koushi-backend" }
koushi-core = { path = "../../../crates/koushi-core" }
koushi-key = { path = "../../../crates/koushi-key" }
koushi-state = { path = "../../../crates/koushi-state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2.3.3"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tempfile = "3"
