[package]
name = "koushi-desktop"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]

[lib]
name = "koushi_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
koushi-core = { path = "../../../crates/koushi-core" }
koushi-key = { path = "../../../crates/koushi-key" }
koushi-state = { path = "../../../crates/koushi-state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2.3.3"
tauri = { version = "2", features = ["protocol-asset"] }
tokio = { version = "1", features = ["time"] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSWindow"] }

[dev-dependencies]
tempfile = "3"
